--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ layout: default
     property management firms, churches, community centre, clubs, hotels, hospital Government, Hypermarket Project. 
   </p>
 
-  <p> The Green technology and products strategic partnerships like RECKLI from Germany, Wood Polymer 
-    Composite ( WPC ) from United States, Luxury Vinyl Tiles from Korea, Solar System and LED
+  <p> The Green technology and products strategic partnerships like <b>RECKLI<b/> from Germany, <b>W</b>ood <b>P</b>olymer 
+    <b>C</b>omposite <b>( WPC )<b/> from United States, <b>Luxury Vinyl Tiles<b/> from Korea, <b>Solar System<b/> and <b>LED<b/>
     Street Lighting Solutions from Germany / Japan / Canada etc.</p>
   
 </body>
