--- a/index.html
+++ b/index.html
@@ -16,4 +16,20 @@ layout: default
     <b>C</b>omposite <b>( WPC )<b/> from United States, <b>Luxury Vinyl Tiles<b/> from Korea, <b>Solar System<b/> and <b>LED<b/>
     Street Lighting Solutions from Germany / Japan / Canada etc.</p>
   
-</body>
+    <b>Our value added services included:<b/>
+     
+      <p>Trading of Green Building Material Supply & Install Biz
+ </p>
+      <p>Electrical Rewiring & Installation System
+ </p>
+      <p>Refurbish, Re-build Bungalow,Residential,Redecoration, Renovation, Repair and Repainting,Varnish Coating floor surface System
+ </p>
+      <p>Facade Restoration, Upgrading and Abseiling Cleaning System
+ </p>
+      <p>Squash Court Wall Plastering & Maintenance System.
+ </p>
+      <p>Floor Epoxy and Waterproofing Rectification System 
+ </p>
+      <p>We are also a company that are very focus on skill development and training, new technology implementation and also constantly R & D to seek for breakthrough in our profession.
+ </p>
+      </body>
