--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ layout: default
     property management firms, churches, community centre, clubs, hotels, hospital Government, Hypermarket Project. 
   </p>
 
-  <p> The Green technology and products strategic partnerships like <b>RECKLI<b/> from Germany, <b>W</b>ood <b>P</b>olymer 
-    <b>C</b>omposite <b>( WPC )<b/> from United States, <b>Luxury Vinyl Tiles<b/> from Korea, <b>Solar System<b/> and <b>LED<b/>
+  <p> The Green technology and products strategic partnerships like <b>RECKLI</b> from Germany, <b>W</b>ood <b>P</b>olymer 
+    <b>C</b>omposite <b>( WPC )</b> from United States, <b>Luxury Vinyl Tiles</b> from Korea, <b>Solar System</b> and <b>LED</b>
     Street Lighting Solutions from Germany / Japan / Canada etc.</p>
   
-    <b>Our value added services included:<b/>
+    <b>Our value added services included:</b>
      
       <p>Trading of Green Building Material Supply & Install Biz
  </p>
