--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@ layout: default
 ---
 <body>
 <h1>About Us</h1>
+<h1>About Us2</h1>
+<h2>About Us H2</h2>
+<ul>About Us UL</ul>
+<strong>About Us Strong</strong>
+<table>About Us table</table>
+<header>About Us Header</header>
+<Banner>About Us Banner</Banner>
+<dl>About Us dl</dl>
+<pre>About Us pre</pre>
   
   <p> The <b>Ainos Theos Sdn Bhd</b> team has more than 18 years experiences and exposures in property development
     & construction, waterproofing , building maintenance management, Abseiling Cleaning System, design and build, interior design, renovation & upgrading system, Fit-Out works in commercial, industrial and residential and added the green technology and products in 2009. To-date we have undertaken numerous projects in Malaysia.
