--- a/index.html
+++ b/index.html
@@ -2,18 +2,12 @@
 layout: default
 ---
 <body>
-<h1>About Us</h1>
-<h1>About Us2</h1>
-<h2>About Us H2</h2>
-<ul>About Us UL</ul>
-<strong>About Us Strong</strong>
-<table>About Us table</table>
-<header>About Us Header</header>
-<Banner>About Us Banner</Banner>
-<dl>About Us dl</dl>
-<pre>About Us pre</pre>
+
+<header>Ainos Theos</header>
   
-  <p> The <b>Ainos Theos Sdn Bhd</b> team has more than 18 years experiences and exposures in property development
+<h1>About Us</h1>
+  
+  <p> The <strong>Ainos Theos Sdn Bhd</strong> team has more than 18 years experiences and exposures in property development
     & construction, waterproofing , building maintenance management, Abseiling Cleaning System, design and build, interior design, renovation & upgrading system, Fit-Out works in commercial, industrial and residential and added the green technology and products in 2009. To-date we have undertaken numerous projects in Malaysia.
   </p>
 
@@ -21,13 +15,13 @@ layout: default
     property management firms, churches, community centre, clubs, hotels, hospital Government, Hypermarket Project. 
   </p>
 
-  <p> The Green technology and products strategic partnerships like <b>RECKLI</b> from Germany, <b>W</b>ood <b>P</b>olymer 
-    <b>C</b>omposite <b>( WPC )</b> from United States, <b>Luxury Vinyl Tiles</b> from Korea, <b>Solar System</b> and <b>LED</b>
+  <p> The Green technology and products strategic partnerships like <strong>RECKLI</strong> from Germany, <strong>W</strong>ood <Strong>P</strong>olymer 
+    <strong>C</strong>omposite <strong>( WPC )</strong> from United States, <strong>Luxury Vinyl Tiles</strong> from Korea, <strong>Solar System</b> and <strong>LED</strong>
     Street Lighting Solutions from Germany / Japan / Canada etc.</p>
   
-    <b>Our value added services included:</b>
-     
-      <p>Trading of Green Building Material Supply & Install Biz
+<h2>Our Services</h2>
+  
+       <p>Trading of Green Building Material Supply & Install Biz
  </p>
       <p>Electrical Rewiring & Installation System
  </p>
@@ -41,4 +35,35 @@ layout: default
  </p>
       <p>We are also a company that are very focus on skill development and training, new technology implementation and also constantly R & D to seek for breakthrough in our profession.
  </p>
+  
+<h1>Company Profile</h1>
+<h2>Vision</h2>
+  <p>The name <strong>AINOS THEOS</strong> is for the Building Solution People</p>
+ 
+<h2>Mission</h2>
+  <p>To provide Building Material solution to serve all needs</p> 
+  
+<h2>Core Values</h2>
+
+<p><strong>A</strong> SSURANCE We believe that quality begins with assurance of our design, processes and using
+high quality materials and we continuously improve our knowledge and offer innovative solutions
+by making use of latest technology and materials. 
+</p>
+
+<p><strong>I</strong> NTEGRITY We believe in delivering our services with trustworthiness, and great confidence. 
+</p>
+
+<p><strong>N</strong> EEDS We believe in understanding and customising our customer needs. 
+</p>
+
+<p><strong>O</strong> UR We believe in delivering our promises and providing lasting solutions to our customer needs
+</p>
+
+<p><strong>S</strong> AFETY We believe that safety is of top priority.
+</p>
+
+
+<strong></strong>
+
+ 
       </body>
